--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2025-05-31  Bruno Haible  <bruno@clisp.org>
+
+	Mark automake 1.18 as supported.
+	* autogen.sh: Update comment.
+
 2025-04-26  Bruno Haible  <bruno@clisp.org>
 
 	Fix -Wshadow=compatible-local warnings.
